--- a/test.html
+++ b/test.html
@@ -17,9 +17,8 @@
     </p>
     <p>
         Понятно, что на словах это не объяснишь и приходится прибегать к дополнительным инструментам в виде доски и
-        маркера
-        или же при текущих реалиях - online доски типа <a href="https://miro.com/ru/" target="_blank">Miro</a>. Но даже в этом случае обсуждение сваливается в хаотично
-        нарисованные квадратики, круги или прямоугольники с текстом, как-то соединённые стрелками.
+        маркера или же при текущих реалиях - online доски типа <a href="https://miro.com/ru/" target="_blank">Miro</a>.
+        Но даже в этом случае обсуждение сваливается в хаотично нарисованные квадратики, круги или прямоугольники с текстом, как-то соединённые стрелками.
     </p>
     При этом от обсуждения к обсуждению одна и так же схема может быть нарисована 1000 разными способами. Кто-то в
     творческом порыве начинает рисовать иконки пользователей или серверов, а кто-то рисует поток из 10 стрелок, чтобы
@@ -81,7 +80,37 @@
     <p>
         Ниже будет написано мое видение такой нотации с учётом опыта тестирования её вместе с командой. На практике она
         позволила в кратчайшие сроки обсуждать изменения в архитектуре или планировать полноценные новые сервисы или приложения.
-    </p>    
+    </p>
+    <h2>Компоненты</h2>
+    <p>
+        Стоит начать рассмотрение именно с компонент, так как они являются строительными блоками всей нашей диаграммы. Это
+        изолированный с точки зрения логики кусок кода, который может в реальности представлять собой класс или отдельный файл.
+    </p>
+    <p>
+        Это может быть:
+    </p>
+    <ul>
+        <li>Контроллер, которые обрабатывает входящие запросы.</li>
+        <li>Сервис, отвечающий за бизнес логику работы с платежами.</li>
+        <li>Репозиторий, взаимодействующий с базой данных  </li>
+        <li>Обработчик event событий при использовании event sourcing.</li>
+        <li>Бизнес entity пользователя, содержащие поля для него и методы работы.</li>
+    </ul>
+    <p>
+        Фактически все, что вы можете выделить в виде класса с инкапсулированной логикой - это компонент.
+    </p>
+    <p>
+        Для того чтобы максимально полно описать компонент можно указать следующие параметры:
+    </p>
+    <ul>
+        <li>Имя - название компонента, отражающие его суть или даже название класса</li>
+        <li>Тип - чтобы понять что это контроллер или репозиторий</li>
+        <li>Пояснение - если требуется дополнительное описание.</li>
+    </ul>
+    <p>
+        Примеры:
+    </p>
+    <img src="./images/image1.jpg" alt="Описание параметров">
 </body>
 
 </html>
