--- a/test.html
+++ b/test.html
@@ -11,10 +11,14 @@
     <h1>Нотация описания архитектуры приложения</h1>
     <h2>Мотивация</h2>
     <p>
-        Я, как технический директор, регулярно сталкиваюсь с необходимостью обсудить с командой архитектуру нового
+        Я, как <span style="color: red;">технический директор</span>, регулярно сталкиваюсь с необходимостью обсудить с командой архитектуру нового
         приложения или микросервиса. И в рамках таких обсуждений я понял, что не существует единого подхода, который
         позволил бы эффективно общаться команде, обсуждая архитектурные решения.
     </p>
+    <div>
+        <a href="https://miro.com/ru/" target="_blank">Miro</a>
+        <a href="https://miro.com/ru/" target="_blank">Miro</a>
+    </div>
     <p>
         Понятно, что на словах это не объяснишь и приходится прибегать к дополнительным инструментам в виде доски и
         маркера или же при текущих реалиях - online доски типа <a href="https://miro.com/ru/" target="_blank">Miro</a>.
