--- a/test.html
+++ b/test.html
@@ -133,6 +133,37 @@
         </p>
         <img src="./images/image1.jpg" alt="Описание параметров">
     </section>
+    <section>
+       <table>
+        <caption>
+            Структура расходов
+        </caption>
+        <thead>
+         <tr>
+            <th>Статья</th>
+            <th>Сумма</th>
+            <th>Валюта</th>
+         </tr>
+        </thead>
+        <tbody>
+         <tr>
+          <td>Зарплата</td>
+          <td>100 000</td>
+          <td>рублей</td>
+         </tr>
+         <tr>
+            <td>Сервисы</td>
+            <td>10 000</td>
+            <td>рублей</td>
+         </tr>
+        </tbody>
+        <tfoot>
+            <td>Итог</td>
+            <td>110 000</td>
+            <td>рублей</td>
+        </tfoot>
+       </table> 
+    </section>
     <footer>
         Футер
     </footer>
